@@ -186,6 +186,8 @@ Changed in ATK 6.2
 + Added support for different node lock modes (exclusive and shared). [Peter]
 + Added atkDateFormat function which can be used to do localized formatting
   of a time stamp, compatible with PHP's date function. [Peter]
++ Added atkthemeicon Smarty plug-in for including theme icons inside
+  templates. [Peter]
 * Did some housekeeping and removed the use of some unidentified variables
   [mvdvelden]
 * Upgraded Prototype to 1.6.0.2, Scriptaculous to 1.8.1 and Window.js to
